--- a/gayanya/gaya.css
+++ b/gayanya/gaya.css
@@ -84,7 +84,7 @@
 }
 
 .content2-g1{
-    height: 160px;
+    height: 160%;
     margin-top: 30px;
     padding: 20px;
     border-radius: 0px 40px 0px 40px;
@@ -92,7 +92,7 @@
 }
 
 .content2-g1 img{
-    height: 160px;
+    height: 160%;
 }
 
 .content2-des{
